--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 #email service
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=kashi.sa200@gmail.com
-spring.mail.password=poro mmjb tati thio
+spring.mail.username=enter email
+spring.mail.password=enter google app password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.requires=true
